# MSGenAI_Week13_LLMOps_1_Code

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
MSGenAI_Week13_LLMOps_1_Code/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
MSGenAI_Week13_LLMOps_1_Code/data/: golden_dataset.json
MSGenAI_Week13_LLMOps_1_Code/docs/: README.md
MSGenAI_Week13_LLMOps_1_Code/evaluations/: README.md  eval_script.py
MSGenAI_Week13_LLMOps_1_Code/prompts/: README.md  code_evaluation.prompty  code_generation.prompty  intent_classification.prompty  response_synthesis.prompty  sql_generation.prompty
MSGenAI_Week13_LLMOps_1_Code/src/: README.md  app.py  chain.py  config.py  ingestion.py  sql_tools.py  vector_store.py
data/: golden_dataset.json
docs/: README.md
evaluations/: README.md  eval_script.py
prompts/: README.md  code_evaluation.prompty  code_generation.prompty  intent_classification.prompty  response_synthesis.prompty  sql_generation.prompty
src/: README.md  app.py  chain.py  config.py  ingestion.py  sql_tools.py  vector_store.py
